# txdedit

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: pr.yml  release.yml
gui/: AboutDialog.cpp  GameVersionDialog.cpp  GameVersionDialog.h  MainWindow.cpp  MainWindow.h  TXDModel.cpp  TXDModel.h  TextureListWidget.cpp  TextureListWidget.h  TexturePreviewWidget.cpp  TexturePreviewWidget.h  TexturePropertiesWidget.cpp  TexturePropertiesWidget.h  TextureViewWidget.h  version.h.in
libtxd/: txd_converter.cpp  txd_converter.h  txd_dictionary.cpp  txd_dictionary.h  txd_texture.cpp  txd_texture.h  txd_types.cpp  txd_types.h
tests/: test_libtxd.cpp
